feat: make data list collapsible

--- a/internal/controller/list.html.tmpl
+++ b/internal/controller/list.html.tmpl
@@ -15,40 +15,82 @@
       #map {
         height: 500px;
       }
+
+      .collapsible {
+        background-color: #eee;
+        color: #444;
+        cursor: pointer;
+        padding: 18px;
+        width: 100%;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+      }
+
+      .active, .collapsible:hover {
+        background-color: #ccc;
+      }
+
+      .list-content {
+        padding: 0 18px;
+        display: none;
+        overflow: hidden;
+        background-color: #f1f1f1;
+      }
     </style>
   </head>
   <body>
     <h1>Locations</h1>
 
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>User</th>
-          <th>Timestamp</th>
-          <th>Lat</th>
-          <th>Lng</th>
-          <th>Alt</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{ range $v := .Locations }}
-        <tr>
-          <td>{{ $v.Id }}</td>
-          <td>{{ $v.Username }}</td>
-          <td>{{ $v.Created.Format "2006-01-02 15:04" }}</td>
-          <td>{{ $v.Lat }}</td>
-          <td>{{ $v.Lng }}</td>
-          <td>{{ $v.Alt }}</td>
-        </tr>
-        {{
-          end
-        }}
-      </tbody>
-    </table>
+    <button type="button" class="collapsible">Show data</button>
+    <div id="list-content">
+      <table>
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>User</th>
+            <th>Timestamp</th>
+            <th>Lat</th>
+            <th>Lng</th>
+            <th>Alt</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{ range $v := .Locations }}
+          <tr>
+            <td>{{ $v.Id }}</td>
+            <td>{{ $v.Username }}</td>
+            <td>{{ $v.Created.Format "2006-01-02 15:04" }}</td>
+            <td>{{ $v.Lat }}</td>
+            <td>{{ $v.Lng }}</td>
+            <td>{{ $v.Alt }}</td>
+          </tr>
+          {{
+            end
+          }}
+        </tbody>
+      </table>
+    </div>
     <hr />
     <div id="map"></div>
     <script>
+      // collapsible
+      var coll = document.getElementsByClassName("collapsible");
+      var i;
+
+      for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function() {
+          this.classList.toggle("active");
+          var content = this.nextElementSibling;
+          if (content.style.display === "block") {
+            content.style.display = "none";
+          } else {
+            content.style.display = "block";
+          }
+        });
+      }
+
       var locations = [
         {{ range $v := .Locations }}[{{$v.Lat}},{{$v.Lng}}],{{end}}
       ]
