fix: collapsible css

--- a/internal/controller/list.html.tmpl
+++ b/internal/controller/list.html.tmpl
@@ -188,7 +188,7 @@
         background-color: #ccc;
       }
 
-      .list-content {
+      #list-content {
         padding: 0 18px;
         display: none;
         overflow: hidden;
